[gd_scene load_steps=6 format=3 uid="uid://dp64f36jrhu7l"]

[ext_resource type="Script" uid="uid://806441agpfab" path="res://Scripts/repeater.gd" id="1_u4x3o"]
[ext_resource type="Texture2D" uid="uid://cu2vgnthk2kj5" path="res://Sprites/Repeater.png" id="2_7ncsb"]
[ext_resource type="Texture2D" uid="uid://brkajge73xvg8" path="res://Sprites/Red4x4.png" id="3_7ey75"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1mhb5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_7ncsb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eg18s"]
size = Vector2(50, 50)

[node name="Repeater" type="Node2D"]
z_index = -2
script = ExtResource("1_u4x3o")

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 19)
sprite_frames = SubResource("SpriteFrames_1mhb5")

[node name="InputLightSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(-8, 0)
texture = ExtResource("3_7ey75")

[node name="OutputLightSprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(8, 0)
texture = ExtResource("3_7ey75")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_eg18s")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
